--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "@types/react-slick": "0.23.13",
     "antd": "^5.20.5",
+    "clsx": "^2.1.1",
     "next": "14.2.3",
     "react": "18",
     "react-dom": "18",
