--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-slick": "0.23.13",
     "antd": "^5.20.5",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.11.9",
     "next": "14.2.3",
     "react": "18",
     "react-dom": "18",
@@ -33,6 +34,7 @@
     "react-scroll-parallax": "^3.4.5",
     "react-slick": "0.30.2",
     "react-slideshow-image": "^4.3.2",
+    "resize-observer-polyfill": "^1.5.1",
     "sass": "1.77.6",
     "slick-carousel": "1.8.1",
     "sweetalert2": "^11.14.0",
