--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "antd": "^5.20.5",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.9",
+    "lenis": "^1.1.14",
     "next": "14.2.3",
     "react": "18",
     "react-dom": "18",
@@ -31,7 +32,6 @@
     "react-icons": "5.2.1",
     "react-image-gallery": "^1.3.0",
     "react-modal-video": "^2.0.2",
-    "react-scroll-parallax": "^3.4.5",
     "react-slick": "0.30.2",
     "react-slideshow-image": "^4.3.2",
     "resize-observer-polyfill": "^1.5.1",
