--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "5.2.1",
     "react-image-gallery": "^1.3.0",
     "react-modal-video": "^2.0.2",
+    "react-scroll-parallax": "^3.4.5",
     "react-slick": "0.30.2",
     "react-slideshow-image": "^4.3.2",
     "resize-observer-polyfill": "^1.5.1",
