--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3008",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
@@ -24,6 +24,7 @@
     "antd": "^5.20.5",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.9",
+    "gsap": "^3.12.5",
     "lenis": "^1.1.14",
     "next": "14.2.3",
     "react": "18",
@@ -31,6 +32,7 @@
     "react-highlight-words": "^0.20.0",
     "react-icons": "5.2.1",
     "react-image-gallery": "^1.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-modal-video": "^2.0.2",
     "react-scroll-parallax": "^3.4.5",
     "react-slick": "0.30.2",
